--- a/src/layout/card/Card.scss
+++ b/src/layout/card/Card.scss
@@ -19,6 +19,30 @@
             width: 100%;
             aspect-ratio: 1/1;
         }
+        >.card-overlay{
+            position: absolute;
+            top: 6%;
+            right: -60px;
+            transform: rotate(270deg);
+            color: #171313;
+            font-family: var(--main-font);
+            font-size: 13.891px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 14.43px; /* 103.883% */
+            letter-spacing: -0.56px;
+            text-transform: uppercase;
+            &::after{
+                position: absolute;
+                content: "";
+                width: 8px;
+                height: 8px;
+                background-color: #000;
+                left: -15px;
+                border-radius: 50%;
+                top: calc(50% - 30%)
+            }
+        }
         >.play-btn{
             position: absolute;
             left: 5%;
@@ -105,7 +129,93 @@
 
 // DEFAULT CARD
 
-
+.defaultP{
+    &:hover{
+        .card__content{
+            >h2{
+                text-decoration: none;
+            }
+        }
+    }
+    >.card__content{
+        >p{
+            color: #171313;
+            font-family: var(--main-font);
+            font-size: 22.875px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 24.74px; /* 108.153% */
+            letter-spacing: -0.96px;
+        }
+    }
+    max-width: 516px;
+    >.img{
+        height: 716px !important;
+        height: 100%;
+        >img{
+            height: 100%;            
+            width: 100%;
+        }
+    }
+}
+.mediumP{
+    &:hover{
+        .card__content{
+            >h2{
+                text-decoration: none;
+            }
+        }
+    }
+    >.card__content{
+        >p{
+            color: #171313;
+            font-family: var(--main-font);
+            font-size: 22.875px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 24.74px; /* 108.153% */
+            letter-spacing: -0.96px;
+        }
+    }
+    max-width: 424px;
+    >.img{
+        height: 564px !important;
+        height: 100%;
+        >img{
+            height: 100%;            
+            width: 100%;
+        }
+    }
+}
+.smallP{
+    &:hover{
+        .card__content{
+            >h2{
+                text-decoration: none;
+            }
+        }
+    }
+    >.card__content{
+        >p{
+            color: #171313;
+            font-family: var(--main-font);
+            font-size: 22.875px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 24.74px; /* 108.153% */
+            letter-spacing: -0.96px;
+        }
+    }
+    max-width: 312px;
+    >.img{
+        height: 416px !important;
+        height: 100%;
+        >img{
+            height: 100%;            
+            width: 100%;
+        }
+    }
+}
 
 
 
