--- a/src/components/new-released/NewReleased.scss
+++ b/src/components/new-released/NewReleased.scss
@@ -18,6 +18,7 @@
         letter-spacing: -1.92px;
     }
     >a{
+        position: relative;
         text-decoration: none;
         color: #171313;
         font-family: var(--main-font);
@@ -29,7 +30,17 @@
         text-transform: uppercase;
         display: flex;
         align-items: center;
+        &::after{
+            transition: 0.3s;
+            content: "";
+            bottom: 1px;
+            position: absolute;
+            width: 0%;
+            height: 1px;
+            background-color: #fff;
+        }
         >.arrow{
+            transition: 0.3s;
             border: 1px solid black;
             border-radius: 50%;
             width: 22px;
@@ -37,6 +48,22 @@
             padding: 3px; 
             margin-left: 8px;
         }
+        &:hover{
+            &::after{
+                content: "";
+                bottom: 1px;
+                position: absolute;
+                width: 80%;
+                height: 1px;
+                background-color: #000;
+            }
+            >.arrow{
+                background-color: #000;
+                color: #fff;
+            }
+          text-decoration: underline;  
+        }
+        
     }
 }
 
