--- a/src/components/tools/Tools.scss
+++ b/src/components/tools/Tools.scss
@@ -1,12 +1,12 @@
-.spotlights{
+.tools{
     padding: 62px 0;
 }
 
 
-.spotlights-title{
+.tools-title{
     margin-bottom: 32px;
     display: flex;
-    align-items: start calc(25%);
+    align-items: start;
     >h2{
         flex: 1;
         color: #171313;
@@ -23,7 +23,7 @@
             font-style: normal;
             font-weight: 400;
             line-height: 34.56px;
-            letter-spacing: -1.92px;    
+            letter-spacing: -1.92px;  
         }
     }
     >a{
@@ -39,8 +39,18 @@
         text-transform: uppercase;
         display: flex;
         align-items: center;
+        margin-top: 7px;
+        &::after{
+            transition: 0.3s;
+            content: "";
+            bottom: 1px;
+            position: absolute;
+            width: 0%;
+            height: 1px;
+            background-color: #fff;
+        }
         >.arrow{
-            transition: 0.4s;
+            transition: 0.3s;
             border: 1px solid black;
             border-radius: 50%;
             width: 22px;
@@ -48,21 +58,12 @@
             padding: 3px; 
             margin-left: 8px;
         }
-        &::after{
-            transition: 0.3s;
-            content: "";
-            position: absolute;
-            width: 0%;
-            height: 1px;
-            bottom: 25px;
-            background-color: #000;
-        }
         &:hover{
             &::after{
                 content: "";
-                bottom: 25px;
+                bottom: 1px;
                 position: absolute;
-                width: 86%;
+                width: 80%;
                 height: 1px;
                 background-color: #000;
             }
@@ -72,46 +73,14 @@
             }
           text-decoration: underline;  
         }
+        
     }
 }
 
 .cards{
-    width: 100%;
-    .swiper-slide{
-        text-align: start;
-        >a{
-            text-decoration: none;
-            display: flex;
-            justify-content: center;
-        }
+    display: flex;
+    gap: 0 24px;
+    >a{
+        text-decoration: none;
     }
 }
-
-.swiper-wrapper{
-    display: flex;
-    align-items: center;
-}
-
-.swiper {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-  
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
