--- a/src/layout/card/Card.scss
+++ b/src/layout/card/Card.scss
@@ -2,6 +2,8 @@
     &:hover{
         .img{
             .play-btn{
+                transition: 0.4s;
+
                 background-color: #fff;
             }
         }
@@ -43,7 +45,9 @@
                 top: calc(50% - 30%)
             }
         }
+        
         >.play-btn{
+            transition: 0.3s;
             position: absolute;
             left: 5%;
             bottom: 5%;
@@ -158,6 +162,9 @@
         }
     }
 }
+
+
+// MEDIUM CARD
 .mediumP{
     &:hover{
         .card__content{
