--- a/src/components/spotlights/Spotlights.scss
+++ b/src/components/spotlights/Spotlights.scss
@@ -100,7 +100,7 @@
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    background: transparent;
   
     /* Center slide text vertically */
     display: flex;
@@ -113,5 +113,9 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  .spotlightslide{
+    background-color: transparent !important;
   }
 
